<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_layout"
    tools:context=".MainActivity">

    <faranjit.currency.edittext.CurrencyEditText
        android:id="@+id/inputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:gravity="end"
        android:hint="@string/input_hint"
        android:inputType="numberDecimal"
        android:textSize="@dimen/input_text_size"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelTextView"
        app:locale="es_VE"
        app:showSymbol="false" />

    <TextView
        android:id="@+id/resultAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/sovereigns_hint"
        android:textSize="@dimen/input_text_size"
        android:maxLines="1"
        android:lines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputText" />

    <Switch
        android:id="@+id/switchCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:textSize="15sp"
        app:fontFamily="@font/julius_sansone_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchCurrency"
        tools:text="Bolívares Fuertes => Bolívares Soberanos" />

    <ImageView
        android:id="@+id/logo_jap"
        android:layout_width="185dp"
        android:layout_height="45dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/logo_jap_description"
        app:layout_constraintBottom_toTopOf="@+id/adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/jap_logo" />

    <ImageButton
        android:id="@+id/textToSpeechButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_volume_up_black_24dp"
        android:tint="@color/colorAccent"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@+id/resultText"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/textToSpeech" />

    <TextView
        android:id="@+id/resultText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:gravity="top|start"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/result_text_size"
        app:fontFamily="@font/raleway_regular"
        app:layout_constraintBottom_toTopOf="@+id/logo_jap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/textToSpeechButton"
        app:layout_constraintTop_toBottomOf="@+id/resultAmount"
        tools:text="Son: dos mil quinientos cincuenta y ocho bolívares soveranos con dieciocho céntimos." />

    <ImageView
        android:id="@+id/logoSovereigns"
        android:layout_width="86dp"
        android:layout_height="64dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/logo_sovereigns_description"
        app:layout_constraintBottom_toBottomOf="@+id/switchCurrency"
        app:layout_constraintStart_toEndOf="@+id/switchCurrency"
        app:layout_constraintTop_toTopOf="@+id/switchCurrency"
        app:srcCompat="@drawable/sovereigns_logo" />

    <ImageView
        android:id="@+id/logoStrong"
        android:layout_width="88dp"
        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/logo_strong_description"
        app:layout_constraintBottom_toBottomOf="@+id/switchCurrency"
        app:layout_constraintEnd_toStartOf="@+id/switchCurrency"
        app:layout_constraintTop_toTopOf="@+id/switchCurrency"
        app:srcCompat="@drawable/strong_logo" />

    <!-- Production Ads -->
    <!--<com.google.android.gms.ads.AdView-->
        <!--android:visibility="visible"-->
        <!--android:id="@+id/adView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:adSize="SMART_BANNER"-->
        <!--app:adUnitId="ca-app-pub-3221550046636898/8761848930"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent" />-->

    <!-- Testing Ads -->
    <com.google.android.gms.ads.AdView
        android:visibility="invisible"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="SMART_BANNER"
        app:adUnitId="ca-app-pub-3940256099942544/6300978111"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/help_info_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/help_info_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:tint="@color/colorPrimaryDark"
        app:srcCompat="@android:drawable/ic_menu_info_details" />

</android.support.constraint.ConstraintLayout>