<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bolívar Soberano</string>
    <string name="input_hint">0,00</string>
    <string name="strong_hint">Bs.F 0,00</string>
    <string name="sovereigns_hint">Bs.S 0,00</string>
    <string name="strong_symbol">Bs.F</string>
    <string name="sovereigns_symbol">Bs.S</string>
    <string name="label_exchange">%1$s => %2$s</string>
    <string name="logo_jap_description">Jap System logo</string>
    <string name="logo_sovereigns_description">Bolívares soberanos logo</string>
    <string name="logo_strong_description">Bolívares fuertes logo</string>
    <string name="strong_name_singular">Bolívar Fuerte</string>
    <string name="strong_name_plural">Bolívares Fuertes</string>
    <string name="sovereign_name_singular">Bolívar Soberano</string>
    <string name="sovereign_name_plural">Bolívares Soberanos</string>
    <string name="help_info_button">Help &amp; Info</string>
    <string name="round_info" tools:ignore="TypographyDashes">
        El redondeo de las cifras decimales se calcula de acuerdo a lo establecido en la Resolución N° 18-07-02 emitida por el Banco Central de Venezuela.
    </string>
    <string name="textToSpeech">Presione para escuchar el monto.</string>
</resources>
